# HW10-1

./: .flake8  .gitignore  README.md  pyproject.toml
src/: masks.py  processing.py  widget.py  widget_v2.py  widgetv2.py
tests/: conftest.py  import_test.py  test_masks.py  test_processing.py  test_widget.py  test_widgetv2.py
